# cyclonedds

./: .travis.yml
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/ddsi/include/dds/ddsi/: ddsi_security_omg.h  q_entity.h
src/core/ddsi/src/: ddsi_security_omg.c  q_entity.c  q_xevent.c
src/ddsrt/: CMakeLists.txt
src/ddsrt/include/dds/ddsrt/: library.h  time.h
src/ddsrt/src/dynlib/windows/: dynlib.c
src/ddsrt/tests/: CMakeLists.txt  dl.c
src/security/: CMakeLists.txt
src/security/api/include/dds/security/: dds_security_api_types.h
src/security/builtin_plugins/: CMakeLists.txt
src/security/builtin_plugins/authentication/: CMakeLists.txt
src/security/builtin_plugins/authentication/src/: auth_defs.h  auth_utils.c  auth_utils.h  authentication.c  authentication.h
src/security/builtin_plugins/tests/: CMakeLists.txt  config_env.h.in
src/security/builtin_plugins/tests/common/src/: handshake_helper.c  handshake_helper.h  loader.c  loader.h
src/security/builtin_plugins/tests/get_authenticated_peer_credential_token/src/: get_authenticated_peer_credential_token_utests.c
src/security/builtin_plugins/tests/process_handshake/src/: process_handshake_utests.c
src/security/builtin_plugins/tests/validate_begin_handshake_reply/src/: validate_begin_handshake_reply_utests.c
src/security/builtin_plugins/tests/validate_local_identity/src/: validate_local_identity_utests.c
src/security/core/: CMakeLists.txt
src/security/core/include/dds/security/core/: dds_security_serialize.h  dds_security_types.h  dds_security_utils.h  shared_secret.h
src/security/core/src/: dds_security_builtintopics.c  dds_security_serialize.c  dds_security_utils.c  shared_secret.c
src/security/core/tests/plugin_loading/: CMakeLists.txt  plugin_loading.c
src/security/core/tests/plugin_loading/plugin_mock/authentication_all_ok_other/: mock_authentication.h
